--- a/CHATTERLY/demo.html
+++ b/CHATTERLY/demo.html
@@ -19,8 +19,8 @@
             </div>
         </div>
         <div class="profile">
+            <div class="photo"><img src="./images/profile.png"width="30" height="30" style ="border-radius: 30px;"></div>
             <select value="name" >
-                <i class="fa-solid fa-caret-down"></i> 
                 <option>Nancy Shrown</option>
                 <option>Login In</option>
                 <option>Login Out</option>
@@ -63,7 +63,7 @@
                 <p class="card1">How To Make GUI In Java With Example Example</p>
                 <hr>
                 <div class="pic">
-                    <img src="./images/profile n.jpg" alt="" width="30" height="30" style="border-radius: 30px;">
+                    <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
                 <span class="pic-text">Dasteen</span>
                 <span class="pic-text2">Jan 10, 2022</span>
@@ -79,7 +79,7 @@
                 <p class="card2">Make Animated Light Mode And Dark Mode Toggle With CSS</p>
                 <hr>
                 <div class="pic">
-                    <img src="./images/profile n.jpg" alt="" width="30" height="30" style="border-radius: 30px;">
+                    <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
                 <span class="pic-text">Dasteen</span>
                 <span class="pic-text2">Jan 10, 2022</span>
@@ -95,7 +95,7 @@
                 <p class="card3">Make Tic Tac Toe Games With React JS</p>
                 <hr>
                 <div class="pic">
-                    <img src="./images/profile n.jpg" alt="" width="30" height="30" style="border-radius: 30px;">
+                    <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
                 <span class="pic-text">Dasteen</span>
                 <span class="pic-text2">Jan 10, 2022</span>
@@ -113,7 +113,7 @@
                 <p class="card1">How To Make GUI In Java With Example Example</p>
                 <hr>
                 <div class="pic">
-                    <img src="./images/profile n.jpg" alt="" width="30" height="30" style="border-radius: 30px;">
+                    <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
                 <span class="pic-text">Dasteen</span>
                 <span class="pic-text2">Jan 10, 2022</span>
@@ -129,7 +129,7 @@
                 <p class="card2">Make Animated Light Mode And Dark Mode Toggle With CSS</p>
                 <hr>
                 <div class="pic">
-                    <img src="./images/profile n.jpg" alt="" width="30" height="30" style="border-radius: 30px;">
+                    <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
                 <span class="pic-text">Dasteen</span>
                 <span class="pic-text2">Jan 10, 2022</span>
@@ -145,7 +145,7 @@
                 <p class="card3">Make Tic Tac Toe Games With React JS</p>
                 <hr>
                 <div class="pic">
-                    <img src="./images/profile n.jpg" alt="" width="30" height="30" style="border-radius: 30px;">
+                    <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
                 <span class="pic-text">Dasteen</span>
                 <span class="pic-text2">Jan 10, 2022</span>
@@ -163,7 +163,7 @@
                 <p class="card1">How To Make GUI In Java With Example Example</p>
                 <hr>
                 <div class="pic">
-                    <img src="./images/profile n.jpg" alt="" width="30" height="30" style="border-radius: 30px;">
+                    <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
                 <span class="pic-text">Dasteen</span>
                 <span class="pic-text2">Jan 10, 2022</span>
@@ -179,7 +179,7 @@
                 <p class="card2">Make Animated Light Mode And Dark Mode Toggle With CSS</p>
                 <hr>
                 <div class="pic">
-                    <img src="./images/profile n.jpg" alt="" width="30" height="30" style="border-radius: 30px;">
+                    <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
                 <span class="pic-text">Dasteen</span>
                 <span class="pic-text2">Jan 10, 2022</span>
@@ -195,7 +195,7 @@
                 <p class="card3">Make Tic Tac Toe Games With React JS</p>
                 <hr>
                 <div class="pic">
-                    <img src="./images/profile n.jpg" alt="" width="30" height="30" style="border-radius: 30px;">
+                    <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
                 <span class="pic-text">Dasteen</span>
                 <span class="pic-text2">Jan 10, 2022</span>
