--- a/CHATTERLY/demo.html
+++ b/CHATTERLY/demo.html
@@ -65,7 +65,7 @@
                 <div class="pic">
                     <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
-                <span class="pic-text">Dasteen</span>
+                <span class="pic-text">Nancy</span>
                 <span class="pic-text2">Jan 10, 2022</span>
                 <span class="heart"><i class="fa-solid fa-heart"></i></span>
                 <p class="likes">03</p>
@@ -81,7 +81,7 @@
                 <div class="pic">
                     <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
-                <span class="pic-text">Dasteen</span>
+                <span class="pic-text">Nancy</span>
                 <span class="pic-text2">Jan 10, 2022</span>
                 <span class="heart"><i class="fa-solid fa-heart"></i></span>
                 <p class="likes">03</p>
@@ -97,7 +97,7 @@
                 <div class="pic">
                     <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
-                <span class="pic-text">Dasteen</span>
+                <span class="pic-text">Nancy</span>
                 <span class="pic-text2">Jan 10, 2022</span>
                 <span class="heart"><i class="fa-solid fa-heart"></i></span>
                 <p class="likes">03</p>
@@ -115,7 +115,7 @@
                 <div class="pic">
                     <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
-                <span class="pic-text">Dasteen</span>
+                <span class="pic-text">Nancy</span>
                 <span class="pic-text2">Jan 10, 2022</span>
                 <span class="heart"><i class="fa-solid fa-heart"></i></span>
                 <p class="likes">03</p>
@@ -131,7 +131,7 @@
                 <div class="pic">
                     <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
-                <span class="pic-text">Dasteen</span>
+                <span class="pic-text">Nancy</span>
                 <span class="pic-text2">Jan 10, 2022</span>
                 <span class="heart"><i class="fa-solid fa-heart"></i></span>
                 <p class="likes">03</p>
@@ -147,7 +147,7 @@
                 <div class="pic">
                     <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
-                <span class="pic-text">Dasteen</span>
+                <span class="pic-text">Nancy</span>
                 <span class="pic-text2">Jan 10, 2022</span>
                 <span class="heart"><i class="fa-solid fa-heart"></i></span>
                 <p class="likes">03</p>
@@ -165,7 +165,7 @@
                 <div class="pic">
                     <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
-                <span class="pic-text">Dasteen</span>
+                <span class="pic-text">Nancy</span>
                 <span class="pic-text2">Jan 10, 2022</span>
                 <span class="heart"><i class="fa-solid fa-heart"></i></span>
                 <p class="likes">03</p>
@@ -181,7 +181,7 @@
                 <div class="pic">
                     <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
-                <span class="pic-text">Dasteen</span>
+                <span class="pic-text">Nancy</span>
                 <span class="pic-text2">Jan 10, 2022</span>
                 <span class="heart"><i class="fa-solid fa-heart"></i></span>
                 <p class="likes">03</p>
@@ -197,7 +197,7 @@
                 <div class="pic">
                     <img src="./images/profile.png" alt="" width="30" height="30" style="border-radius: 30px;">
                 </div>
-                <span class="pic-text">Dasteen</span>
+                <span class="pic-text">Nancy</span>
                 <span class="pic-text2">Jan 10, 2022</span>
                 <span class="heart"><i class="fa-solid fa-heart"></i></span>
                 <p class="likes">03</p>
